chore: update .dockerignore

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,20 +1,20 @@
-Dockerfile.dev
+Dockerfile
 README.md
 assets
-docker-compose.dev.yml
+docker-compose.yml
 poetry.lock
 pyproject.toml
-up.dev.sh
-entrypoint.dev.sh
+up.analysis.v2.sh
+up.etl.v2.sh
+entrypoint.sh
 htmlcov
 makemigrations.sh
 tests
 coverage.sh
-
 .coverage
 .coveragerc
 .dockerignore
-.env.dev
+.env
 .git
 .gitignore
 .mypy_cache
