--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -8,6 +8,7 @@ jobs:
     outputs:
       total: ${{ steps.count-python-files.outputs.total }}
     steps:
+      - uses: actions/checkout@v3
       - id: count-python-files
         run: echo "::set-output name=total::$(git ls-files '*.py' | wc -l)"
 
