--- a/requirements.txt
+++ b/requirements.txt
@@ -84,6 +84,8 @@ tomlkit==0.13.2
 tornado==6.4.1
 traitlets==5.14.3
 typer==0.12.5
+types-psycopg2==2.9.21.20240819
+types-requests==2.32.0.20240907
 typing_extensions==4.12.2
 tzdata==2024.1
 urllib3==2.2.2
