--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ charset-normalizer==3.3.2
 click==8.1.7
 comm==0.2.2
 contourpy==1.3.0
+coverage==7.6.1
 cryptography==43.0.1
 cycler==0.12.1
 debugpy==1.8.5
