--- a/.github/workflows/continuous_integration.yml
+++ b/.github/workflows/continuous_integration.yml
@@ -1,4 +1,4 @@
-name: python-linter
+name: continuous_integration
 
 on: [push]
 
@@ -29,15 +29,6 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          pip install pylint
-          pip install flake8
-          pip install black
-          pip install isort
-          pip install mypy
-          pip install pycodestyle
-          pip install bandit
-          pip install safety
-          pip install vulture
       - name: Analysing the code with pylint
         run: |
           pylint $(git ls-files '*.py')
@@ -53,3 +44,6 @@ jobs:
       - name: Analysing the code with mypy
         run: |
           mypy $(git ls-files '*.py')
+      - name: Run tests
+        run: |
+          python -m unittest discover -s tests -p "test_*.py"
