--- a/.github/workflows/continuous_integration.yml
+++ b/.github/workflows/continuous_integration.yml
@@ -44,6 +44,22 @@ jobs:
       - name: Analysing the code with mypy
         run: |
           mypy $(git ls-files '*.py')
-      - name: Run tests
-        run: |
-          python -m unittest discover -s tests -p "test_*.py"
+    
+    test:
+      needs: lint
+      strategy:
+        matrix:
+          python-version: ["3.12"]
+      steps:
+        - uses: actions/checkout@v3
+        - name: Set up Python ${{ matrix.python-version }}
+          uses: actions/setup-python@v3
+          with:
+            python-version: ${{ matrix.python-version }}
+        - name: Install dependencies
+          run: |
+            python -m pip install --upgrade pip
+            pip install -r requirements.txt
+        - name: Run tests
+          run: |
+            python -m unittest discover -s tests -p "test_*.py"
