chore: add runs on to test job in continuous integration github action

--- a/.github/workflows/continuous_integration.yml
+++ b/.github/workflows/continuous_integration.yml
@@ -46,6 +46,7 @@ jobs:
           mypy $(git ls-files '*.py')
     
   test:
+    runs-on: ubuntu-latest
     needs: lint
     strategy:
       matrix:
